# synthetic-data

./: .gitignore  app.py  config.py  infrastructure.txt  loaders.py  metrics.py  plots.py  pyproject.toml  tables.py
models/: bootstrap.py  cvae.py  gmm.py  iid_columnwise.py
notebooks/: TSTR_VS_TRTS.ipynb  four_pillars.ipynb  run_pipeline copy.ipynb  run_pipeline.ipynb  run_pipeline_trash.ipynb  synthetic_analysis.ipynb  synthetic_generator.ipynb
results/: four_pillars.csv  summary_figs.pkl  synthetic_results_all.csv  synthetic_results_clean.csv  synthetic_results_clean23.csv  table1_full.csv  table2_sample_size.csv  table3_forward.csv  table4_reverse.csv  table5_drop_one.csv
results_tstr/: tstr_results.csv
