[project]
name = "syntheic-data"
version = "0.1.0"
description = "Lots of synths"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyreadr>=0.5.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
    "tabulate>=0.10.0",
    "torch>=2.10.0",
]
